--- a/rpc-node/Cargo.toml
+++ b/rpc-node/Cargo.toml
@@ -38,6 +38,7 @@ solana-rpc = { path = "../rpc", version = "=1.8.0" }
 solana-runtime = { path = "../runtime", version = "=1.8.0" }
 solana-sdk = { path = "../sdk", version = "=1.8.0" }
 solana-version = { path = "../version", version = "=1.8.0" }
+solana-validator = { path = "../validator", version = "=1.8.0" }
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
