--- a/rpc-node/Cargo.toml
+++ b/rpc-node/Cargo.toml
@@ -40,5 +40,9 @@ solana-sdk = { path = "../sdk", version = "=1.8.0" }
 solana-version = { path = "../version", version = "=1.8.0" }
 solana-validator = { path = "../validator", version = "=1.8.0" }
 
+[dev-dependencies]
+solana-local-cluster = { path = "../local-cluster", version = "=1.8.0" }
+tempdir = "0.3.7"
+
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
